# Modular-Chatbot

./: .env.example  .gitignore  CLOUD_RUN.md  Makefile  README.md  cloudbuild.yaml  cloudrun.yml  deploy-cloudrun.ps1  deploy-cloudrun.sh  docker-compose.dev.yml  docker-compose.yml  redis.conf  test_docker_api.ps1  test_docker_api.sh  test_frontend_integration.js  test_knowledge_agent_docker.ps1  test_knowledge_agent_docker.py  test_math_agent_docker.ps1  test_math_agent_docker.sh  undeploy-cloudrun.ps1  undeploy-cloudrun.sh  verify_frontend_implementation.py
.kiro/specs/modular-chatbot/: design.md  requirements.md  tasks.md
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  Makefile  README.md  debug_redis_storage.py  index_infinitepay.py  pyproject.toml  redis_health_check.py  run_tests.py  setup_venv.py  test_api.py  test_knowledge_agent_integration.py  test_math_agent_integration.py  test_redis_simple.py  test_security_simple.py  validate_tests.py  verify_implementation.py  verify_knowledge_agent.py  verify_math_agent.py  verify_security_implementation.py  verify_setup.py
backend/agents/: __init__.py  base.py  gemini_knowledge_agent.py  gemini_math_agent.py  knowledge_agent.py  math_agent.py
backend/app/: main.py
backend/app/middleware/: __init__.py  security.py
backend/app/utils/: __init__.py  google_credentials.py  logger.py  logging_config.py  redis_logger.py  validation.py
backend/chroma_db/: chroma.sqlite3
backend/examples/: logging_demo.py  redis_demo.py  redis_integration_demo.py
backend/infinitepay_faiss_index/: index.faiss  index.pkl
backend/models/: __init__.py  core.py
backend/services/: __init__.py  redis_client.py
backend/tests/: conftest.py  test_ci_cd.py  test_end_to_end.py  test_integration.py  test_knowledge_agent.py  test_logger.py  test_math_agent.py  test_models.py  test_performance.py  test_redis_client.py  test_router_agent.py  test_security.py  test_validation.py
frontend/: .dockerignore  Dockerfile  nginx.conf  nginx.conf.template  package-lock.json  package.json  tsconfig.json
frontend/components/: index.ts
frontend/services/: index.ts
frontend/src/: App.module.css  App.tsx  index.css
frontend/src/components/: ChatInterface.module.css  ChatInterface.tsx  ConversationSelector.module.css  ConversationSelector.tsx  MessageInput.module.css  MessageInput.tsx  MessageList.module.css  MessageList.tsx
frontend/src/services/: api.ts
frontend/src/test/: App.test.tsx
frontend/types/: chat.ts  index.ts
k8s/: backend-deployment.yaml  check-deployment.ps1  check-deployment.sh  configmap.yaml  deploy.ps1  deploy.sh  frontend-deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  pod-disruption-budget.yaml  port-forward.ps1  port-forward.sh  rbac.yaml  redis-deployment.yaml  secrets.yaml  services.yaml  setup-google-credentials.ps1  setup-google-credentials.sh  undeploy.ps1  undeploy.sh  validate.ps1
